@@ -1,12 +1,13 @@
 package org.example.Lesson67_List;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 // CRUD => Create, Read, Update, Delete
-public class ArrayListExercise {
+public class LinkedListExercise {
     public static void main(String[] args) {
-        List<String> list = new ArrayList<>();
+        LinkedList<String> list = new LinkedList<>();
         // Add new element into List
         list.add("Sai");
         list.add("Mao");
@@ -16,8 +17,8 @@ public class ArrayListExercise {
         System.out.println("Size : " + list.size());
 
         // Read element from List
-        System.out.println("First index : " + list.get(0));
-        System.out.println("Last index : " + list.get(list.size() - 1));
+        System.out.println("First index : " + list.getFirst());
+        System.out.println("Last index : " + list.getLast());
 
         // Update element in List
         list.set(list.size() - 1, "Muse");
@@ -27,7 +28,7 @@ public class ArrayListExercise {
         System.out.println();
 
         // Remove element in list
-        list.remove(2); // remove by index
+        list.poll(); // remove by index
         list.remove("Muse"); // remove by element
         System.out.println("Size : " + list.size());
 
